# API-rust

./: Cargo.toml  api-test.ps1
src/: customer.rs  main.rs  vehicle.rs
